--- a/PROJEKT-3/index.html
+++ b/PROJEKT-3/index.html
@@ -3,30 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>TIC TAC TOE</h1>
     <div class="monke">
       <div class="square-container">
-        <div class="square" class="cross"></div>
-        <div class="square" class="circle"></div>
-        <div class="square"></div>
+        <div class="square" data-cell-index="0"></div>
+        <div class="square" data-cell-index="1"></div>
+        <div class="square" data-cell-index="2"></div>
       </div>
       <div class="square-container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div class="square" data-cell-index="3"></div>
+        <div class="square" data-cell-index="4"></div>
+        <div class="square" data-cell-index="5"></div>
       </div>
       <div class="square-container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div class="square" data-cell-index="6"></div>
+        <div class="square" data-cell-index="7"></div>
+        <div class="square" data-cell-index="8"></div>
       </div>
     </div>
-    <div id="reload"><img src="./reload.png" alt="reload" /></div>
     <div id="message" class="message"></div>
-    <script src="./script.js" defer></script>
+    <button id="reload">Reset</button>
+    <script src="./script.js"></script>
   </body>
 </html>
